kubernetes/apps/freepbx/freepbx/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freepbx
  namespace: freepbx
spec:
  hostnames: ["pbx.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: freepbx-web
          namespace: freepbx
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
